Archive/e66d73cbf6bbd1ce500d192032008c70-f33f18cfb12c6ef49afe9f0e5169866a/output
+ clang++ -std=c++1y -Wall -pedantic -pthread main.cpp
main.cpp:7:31: error: 'auto' not allowed in function prototype
        static auto self = [](auto& factorial, int n) -> int
                              ^~~~
main.cpp:11:16: error: no matching function for call to object of type '<lambda at main.cpp:7:28>'
        return self(self, n);
               ^~~~
main.cpp:7:28: note: candidate function not viable: no known conversion from '<lambda at main.cpp:7:28>' to 'int &' for 1st argument
        static auto self = [](auto& factorial, int n) -> int
                           ^
main.cpp:7:28: note: conversion candidate of type 'auto (*)(int &, int) -> int'
main.cpp:14:15: error: invalid operands to binary expression ('ostream' (aka 'basic_ostream<char>') and 'void')
    std::cout << factorial(5) << std::endl;
    ~~~~~~~~~ ^  ~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:108:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to '__ostream_type &(*)(__ostream_type &)'
      operator<<(__ostream_type& (*__pf)(__ostream_type&))
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:117:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to '__ios_type &(*)(__ios_type &)'
      operator<<(__ios_type& (*__pf)(__ios_type&))
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:127:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'std::ios_base &(*)(std::ios_base &)'
      operator<<(ios_base& (*__pf) (ios_base&))
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:166:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'long'
      operator<<(long __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:170:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'unsigned long'
      operator<<(unsigned long __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:174:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'bool'
      operator<<(bool __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:178:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'short'
      operator<<(short __n);
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:181:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'unsigned short'
      operator<<(unsigned short __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:189:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'int'
      operator<<(int __n);
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:192:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'unsigned int'
      operator<<(unsigned int __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:201:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'long long'
      operator<<(long long __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:205:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'unsigned long long'
      operator<<(unsigned long long __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:220:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'double'
      operator<<(double __f)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:224:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'float'
      operator<<(float __f)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:232:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'long double'
      operator<<(long double __f)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:245:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to 'const void *'
      operator<<(const void* __p)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:270:7: note: candidate function not viable: cannot convert argument of incomplete type 'void' to '__streambuf_type *' (aka 'basic_streambuf<char, std::char_traits<char> > *')
      operator<<(__streambuf_type* __sb);
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:476:5: note: candidate function [with _CharT = char, _Traits = std::char_traits<char>] not viable: cannot convert argument of incomplete type 'void' to 'char'
    operator<<(basic_ostream<_CharT, _Traits>& __out, char __c)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:482:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: cannot convert argument of incomplete type 'void' to 'char'
    operator<<(basic_ostream<char, _Traits>& __out, char __c)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:488:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: cannot convert argument of incomplete type 'void' to 'signed char'
    operator<<(basic_ostream<char, _Traits>& __out, signed char __c)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:493:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: cannot convert argument of incomplete type 'void' to 'unsigned char'
    operator<<(basic_ostream<char, _Traits>& __out, unsigned char __c)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:530:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: cannot convert argument of incomplete type 'void' to 'const char *'
    operator<<(basic_ostream<char, _Traits>& __out, const char* __s)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:543:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: cannot convert argument of incomplete type 'void' to 'const signed char *'
    operator<<(basic_ostream<char, _Traits>& __out, const signed char* __s)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:548:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: cannot convert argument of incomplete type 'void' to 'const unsigned char *'
    operator<<(basic_ostream<char, _Traits>& __out, const unsigned char* __s)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/ostream.tcc:321:5: note: candidate function [with _CharT = char, _Traits = std::char_traits<char>] not viable: cannot convert argument of incomplete type 'void' to 'const char *'
    operator<<(basic_ostream<_CharT, _Traits>& __out, const char* __s)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:471:5: note: candidate template ignored: deduced conflicting types for parameter '_CharT' ('char' vs. 'void')
    operator<<(basic_ostream<_CharT, _Traits>& __out, _CharT __c)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:602:5: note: candidate template ignored: substitution failure [with _CharT = char, _Traits = std::char_traits<char>, _Tp = void]: cannot form a reference to 'void'
    operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
    ^                                                          ~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/basic_string.h:2753:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'void'
    operator<<(basic_ostream<_CharT, _Traits>& __os,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:513:5: note: candidate template ignored: could not match 'const _CharT *' against 'void'
    operator<<(basic_ostream<_CharT, _Traits>& __out, const _CharT* __s)
    ^
3 errors generated.
